# bookstore-api

./: Makefile  README.md  docker-compose.yaml  pyproject.toml
book/: models.py
book/migrations/: 0001_initial.py  0002_book_deleted_at.py
bookstore_api/: settings.py
order/: models.py
order/migrations/: 0001_initial.py
