[tool.poetry]
name = "bookstore-api"
version = "0.1.0"
description = ""
authors = ["Luiz Fernandes de Oliveira <luizfernandesoliveiraoficial@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
